data/derived/comb/progs/unify/prog6052.ml.out
Characters 216-243:
  |(0,[]) -> if(fst x + snd x) > 9 then (1,((fst x + snd x)mod 10)::[])
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
